--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "仿网易严选",
+    "navigationBarTitleText": "招万邻舍·予枫枫",
     "navigationBarTextStyle": "black",
     "enablePullDownRefresh": true
   },
@@ -51,7 +51,7 @@
         "pagePath": "pages/index/index",
         "iconPath": "static/images/ic_menu_choice_nor.png",
         "selectedIconPath": "static/images/ic_menu_choice_pressed.png",
-        "text": "首页"
+        "text": "首页1"
       },
       {
         "pagePath": "pages/topic/topic",
